# Tesis-Brazo-Robotico

./: .gitignore  README.md  main.py  pyproject.toml  test.py
Cinta Arduino/: communication.py
Cinta Arduino/test/: test.ino
Cinta_Arduino/: communication.py
Cinta_Arduino/test/: test.ino
Model/: background_solution.py  keras_model.h5  labels.txt  plano_cartesiano.py  video_detector_keras.py  video_detector_main.py  video_detector_teachable.py
Robot Movement/: angles.py  calibration.py  containers_movement.py  control_brazo.cpp  move_arm.py  mover_brazo.py  our_lugo_solution.py  resultados_robot.json
Robot_Movement/: angles.py  calibration.py  containers_movement.py  control_robot.py  grab.py  move_arm.py  our_lugo_solution.py  saludo.py  save_results.py
