[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesis-robotica"
version = "1.0.0"
description = "Sistema de clasificación de residuos con brazo robótico"
authors = [
    {name = "José Vielma", email = "jgvielma.21@est.ucab.edu.ve"},
    {name = "Cristina Morales", email = "cmorales.21@est.ucab.edu.ve"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Dependencias para Model (Computer Vision y ML)
    "opencv-python==4.11.0.86",
    "tensorflow==2.12.1",
    "keras==2.12.0",
]

[project.urls]
Homepage = "https://github.com/GloodBuster/Tesis-Brazo-Robotico"
Repository = "https://github.com/GloodBuster/Tesis-Brazo-Robotico.git"

[tool.setuptools.packages.find]
include = ["Model*", "Robot Movement*"]
exclude = ["*.tests*", "*.test*", "References*"] 